--- a/layouts/partials/mode.html
+++ b/layouts/partials/mode.html
@@ -1,4 +1,4 @@
 <div class = 'color_mode'>
-<label for = 'mode'>Toggle Dark Mode</label>
+<label for = 'mode'>Тёмная тема</label>
 <input type = 'checkbox' class = 'color_choice' id = 'mode'>
 </div>
