--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,11 @@
 {{ define "main" }}
   <div class = 'wrap mt post'>
     <div>
-      {{- $date := (dateFormat "02. January 2006" .Date) -}}
-      <p class = 'post_date pale'>{{ $date }}</p>
+      {{- with .Date -}}
+        <p class = 'post_date pale' datetime='{{ .Format "02 January 2006" | safeHTML }}'>
+          {{ .Day }} {{ index $.Site.Data.months (printf "%d" .Month) }} {{ .Year }}
+        </p>
+      {{- end -}}
       <h1 class = 'post_title'>{{ .Title }}</h1>
       <div class = 'post_body'>
         <div class = 'post_inner'>
