--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,9 @@
     <a href = '{{ $value.Permalink }}' {{ if eq $index 0 }} class = 'grid-reverse' {{ end }}>
       <div class = 'article_thumb' style='background-image: url({{ $bg }})'></div>
       <div class = 'article_meta {{ if eq $index 0 }} center_y {{ end }}'>
-        <time class = 'pale'>{{ dateFormat "January 02, 2006" $value.Date }}</time>
+        <time class = 'pale' datetime='{{ $value.Date.Format "02 January 2006" | safeHTML }}'>
+          {{ $value.Date.Day }} {{ index $.Site.Data.months (printf "%d" $value.Date.Month) }}
+        </time>
         <h3 class = 'article_title'>{{ $value.Title }}</h3>
         <div class = 'article_excerpt {{ if eq $index 0 }} visible {{ end }}'>
         <p>{{ $value.Summary | truncate 150 }}</p>
