--- a/layouts/partials/archive.html
+++ b/layouts/partials/archive.html
@@ -4,7 +4,9 @@
   {{- range $paginator.Pages }}
   <a class = 'archive_item' href = '{{ .Permalink }}'>
     {{- with .Date -}}
-    <time class = 'pale'>{{ dateFormat "02. January 2006" . }}</time>
+      <time class = 'pale' datetime='{{ .Format "02 January 2006" | safeHTML }}'>
+        {{ .Day }} {{ index $.Site.Data.months (printf "%d" .Month) }} {{ .Year }}
+      </time>
     {{- end -}}
     <h3 class = 'article_title'>{{ .Title }}</h3>
     {{- with .Summary -}}
