--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class = 'footer wrap pale'>
-  <p>&copy;&nbsp;<span class = 'year'></span>&nbsp;{{ .Site.Title }}</p>
-  <p></p>
+  <p>&copy;&nbsp;<span class = 'year'></span>&nbsp;{{ .Site.Params.Name }}</p>
+  <p>{{ .Site.Copyright }}</p>
 </footer>
 {{ $scriptPath := "js/index.js" }}
 {{ $scripts := resources.Get $scriptPath | resources.ExecuteAsTemplate $scriptPath . | resources.Minify | resources.Fingerprint "sha512" }}
