--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div class = 'never wrap'>
-  <h1 class = 'never_title'>Uh Ohhh!</h1>
-  <p class = 'pale'>We couldn't find the page you're looking for</p>
-  <div class = 'btn btn_back'>Go Back</div>
+  <h1 class = 'never_title'>Упс!</h1>
+  <p class = 'pale'>Мы не смогли найти запрашиваемую вами страницу :(</p>
+  <div class = 'btn btn_back'>К выпускам</div>
 </div>
 {{ end }}
