--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,7 +10,7 @@
       <div class = 'post_body'>
         <div class = 'post_inner'>
         {{ with .Params.image }}
-          <img src = '{{ absURL (printf "images/%s" .) }}' alt = '{{ . }}' class = 'post_thumbnail'>
+          <img src = '{{ . }}' alt = '{{ . }}' class = 'post_thumbnail'>
         {{ end }}
           {{ .Content }}
 
