--- a/layouts/partials/pager.html
+++ b/layouts/partials/pager.html
@@ -9,7 +9,7 @@
       <span class = ' pager_item pager_active pager_prev'></span>
     {{- end }}
 
-    <span>{{ $paginator.PageNumber }} of {{ $pages }}</span>
+    <span>{{ $paginator.PageNumber }} из {{ $pages }}</span>
 
     {{- if $paginator.HasNext -}}
       <a href = '{{ $root }}{{ $paginator.Next.URL }}' class = ' pager_item pager_next'></a>
